parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    LBRACE
    NEW
    RBRACE
    SEMICOLON
    TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement NEWLINE statements
Rule 3     statements -> statement statements
Rule 4     statements -> statement
Rule 5     statements -> empty
Rule 6     empty -> <empty>
Rule 7     statement -> print_stmt
Rule 8     statement -> assignment_stmt
Rule 9     statement -> input_stmt
Rule 10    statement -> if_stmt
Rule 11    statement -> while_stmt
Rule 12    statement -> for_stmt
Rule 13    statement -> list_stmt
Rule 14    statement -> function_def
Rule 15    statement -> function_call
Rule 16    statement -> return_stmt
Rule 17    statement -> break_stmt
Rule 18    statement -> expression
Rule 19    function_def -> DEF ID LPAREN parameter_list RPAREN COLON NEWLINE statements
Rule 20    function_def -> DEF ID LPAREN RPAREN COLON NEWLINE statements
Rule 21    parameter_list -> ID
Rule 22    parameter_list -> ID COMMA parameter_list
Rule 23    function_call -> ID LPAREN argument_list RPAREN
Rule 24    function_call -> ID LPAREN RPAREN
Rule 25    argument_list -> expression
Rule 26    argument_list -> expression COMMA argument_list
Rule 27    return_stmt -> RETURN expression
Rule 28    return_stmt -> RETURN
Rule 29    print_stmt -> PRINT LPAREN expression RPAREN
Rule 30    print_arguments -> expression
Rule 31    print_arguments -> expression COMMA print_arguments
Rule 32    assignment_stmt -> ID EQUALS expression
Rule 33    input_stmt -> ID EQUALS INPUT LPAREN STRING RPAREN
Rule 34    input_stmt -> input_multiple
Rule 35    input_multiple -> id_list EQUALS INPUT LPAREN STRING RPAREN
Rule 36    id_list -> ID COMMA ID
Rule 37    id_list -> ID COMMA id_list
Rule 38    list_stmt -> ID EQUALS LBRACKET list_elements RBRACKET
Rule 39    list_stmt -> ID EQUALS LBRACKET RBRACKET
Rule 40    list_elements -> expression
Rule 41    list_elements -> expression COMMA list_elements
Rule 42    expression -> ID LBRACKET expression RBRACKET
Rule 43    expression -> ID DOT APPEND LPAREN expression RPAREN
Rule 44    break_stmt -> BREAK
Rule 45    if_stmt -> IF expression COLON NEWLINE statements elif_stmt else_stmt
Rule 46    if_stmt -> IF expression COLON statements elif_stmt else_stmt
Rule 47    elif_stmt -> ELIF expression COLON NEWLINE statements elif_stmt
Rule 48    elif_stmt -> ELIF expression COLON statements elif_stmt
Rule 49    elif_stmt -> empty
Rule 50    else_stmt -> ELSE COLON NEWLINE statements
Rule 51    else_stmt -> ELSE COLON statements
Rule 52    else_stmt -> empty
Rule 53    while_stmt -> WHILE expression COLON NEWLINE statements
Rule 54    for_stmt -> FOR ID IN RANGE LPAREN expression COMMA expression RPAREN COLON NEWLINE statements
Rule 55    expression -> expression PLUS expression
Rule 56    expression -> expression MINUS expression
Rule 57    expression -> expression TIMES expression
Rule 58    expression -> expression DIVIDE expression
Rule 59    expression -> expression POWER expression
Rule 60    expression -> expression AND expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> expression EQUAL_EQUAL expression
Rule 63    expression -> expression NOT_EQUAL expression
Rule 64    expression -> expression GREATER expression
Rule 65    expression -> expression GREATER_EQUAL expression
Rule 66    expression -> expression LESS expression
Rule 67    expression -> expression LESS_EQUAL expression
Rule 68    expression -> MINUS expression
Rule 69    expression -> NOT expression
Rule 70    expression -> LPAREN expression RPAREN
Rule 71    expression -> NUMBER
Rule 72    expression -> FLOAT
Rule 73    expression -> INT
Rule 74    expression -> STRING
Rule 75    expression -> TRUE
Rule 76    expression -> FALSE
Rule 77    expression -> ID

Terminals, with rules where they appear

AND                  : 60
APPEND               : 43
BREAK                : 44
COLON                : 19 20 45 46 47 48 50 51 53 54
COMMA                : 22 26 31 36 37 41 54
COMMENT              : 
DEF                  : 19 20
DIVIDE               : 58
DOT                  : 43
ELIF                 : 47 48
ELSE                 : 50 51
EQUALS               : 32 33 35 38 39
EQUAL_EQUAL          : 62
FALSE                : 76
FLOAT                : 72
FOR                  : 54
GREATER              : 64
GREATER_EQUAL        : 65
ID                   : 19 20 21 22 23 24 32 33 36 36 37 38 39 42 43 54 77
IF                   : 45 46
IN                   : 54
INPUT                : 33 35
INT                  : 73
LBRACE               : 
LBRACKET             : 38 39 42
LESS                 : 66
LESS_EQUAL           : 67
LPAREN               : 19 20 23 24 29 33 35 43 54 70
MINUS                : 56 68
NEW                  : 
NEWLINE              : 2 19 20 45 47 50 53 54
NOT                  : 69
NOT_EQUAL            : 63
NUMBER               : 71
OR                   : 61
PLUS                 : 55
POWER                : 59
PRINT                : 29
RANGE                : 54
RBRACE               : 
RBRACKET             : 38 39 42
RETURN               : 27 28
RPAREN               : 19 20 23 24 29 33 35 43 54 70
SEMICOLON            : 
STRING               : 33 35 74
TIMES                : 57
TRUE                 : 75
TYPE                 : 
WHILE                : 53
error                : 

Nonterminals, with rules where they appear

argument_list        : 23 26
assignment_stmt      : 8
break_stmt           : 17
elif_stmt            : 45 46 47 48
else_stmt            : 45 46
empty                : 5 49 52
expression           : 18 25 26 27 29 30 31 32 40 41 42 43 45 46 47 48 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 69 70
for_stmt             : 12
function_call        : 15
function_def         : 14
id_list              : 35 37
if_stmt              : 10
input_multiple       : 34
input_stmt           : 9
list_elements        : 38 41
list_stmt            : 13
parameter_list       : 19 22
print_arguments      : 31
print_stmt           : 7
program              : 0
return_stmt          : 16
statement            : 2 3 4
statements           : 1 2 3 19 20 45 46 47 48 50 51 53 54
while_stmt           : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement NEWLINE statements
    (3) statements -> . statement statements
    (4) statements -> . statement
    (5) statements -> . empty
    (7) statement -> . print_stmt
    (8) statement -> . assignment_stmt
    (9) statement -> . input_stmt
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . for_stmt
    (13) statement -> . list_stmt
    (14) statement -> . function_def
    (15) statement -> . function_call
    (16) statement -> . return_stmt
    (17) statement -> . break_stmt
    (18) statement -> . expression
    (6) empty -> .
    (29) print_stmt -> . PRINT LPAREN expression RPAREN
    (32) assignment_stmt -> . ID EQUALS expression
    (33) input_stmt -> . ID EQUALS INPUT LPAREN STRING RPAREN
    (34) input_stmt -> . input_multiple
    (45) if_stmt -> . IF expression COLON NEWLINE statements elif_stmt else_stmt
    (46) if_stmt -> . IF expression COLON statements elif_stmt else_stmt
    (53) while_stmt -> . WHILE expression COLON NEWLINE statements
    (54) for_stmt -> . FOR ID IN RANGE LPAREN expression COMMA expression RPAREN COLON NEWLINE statements
    (38) list_stmt -> . ID EQUALS LBRACKET list_elements RBRACKET
    (39) list_stmt -> . ID EQUALS LBRACKET RBRACKET
    (19) function_def -> . DEF ID LPAREN parameter_list RPAREN COLON NEWLINE statements
    (20) function_def -> . DEF ID LPAREN RPAREN COLON NEWLINE statements
    (23) function_call -> . ID LPAREN argument_list RPAREN
    (24) function_call -> . ID LPAREN RPAREN
    (27) return_stmt -> . RETURN expression
    (28) return_stmt -> . RETURN
    (44) break_stmt -> . BREAK
    (42) expression -> . ID LBRACKET expression RBRACKET
    (43) expression -> . ID DOT APPEND LPAREN expression RPAREN
    (55) expression -> . expression PLUS expression
    (56) expression -> . expression MINUS expression
    (57) expression -> . expression TIMES expression
    (58) expression -> . expression DIVIDE expression
    (59) expression -> . expression POWER expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression EQUAL_EQUAL expression
    (63) expression -> . expression NOT_EQUAL expression
    (64) expression -> . expression GREATER expression
    (65) expression -> . expression GREATER_EQUAL expression
    (66) expression -> . expression LESS expression
    (67) expression -> . expression LESS_EQUAL expression
    (68) expression -> . MINUS expression
    (69) expression -> . NOT expression
    (70) expression -> . LPAREN expression RPAREN
    (71) expression -> . NUMBER
    (72) expression -> . FLOAT
    (73) expression -> . INT
    (74) expression -> . STRING
    (75) expression -> . TRUE
    (76) expression -> . FALSE
    (77) expression -> . ID
    (35) input_multiple -> . id_list EQUALS INPUT LPAREN STRING RPAREN
    (36) id_list -> . ID COMMA ID
    (37) id_list -> . ID COMMA id_list

    $end            reduce using rule 6 (empty -> .)
    PRINT           shift and go to state 17
    ID              shift and go to state 19
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    DEF             shift and go to state 25
    RETURN          shift and go to state 26
    BREAK           shift and go to state 27
    MINUS           shift and go to state 28
    NOT             shift and go to state 29
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 32
    STRING          shift and go to state 20
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    print_stmt                     shift and go to state 5
    assignment_stmt                shift and go to state 6
    input_stmt                     shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10
    list_stmt                      shift and go to state 11
    function_def                   shift and go to state 12
    function_call                  shift and go to state 13
    return_stmt                    shift and go to state 14
    break_stmt                     shift and go to state 15
    expression                     shift and go to state 16
    input_multiple                 shift and go to state 21
    id_list                        shift and go to state 35

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . NEWLINE statements
    (3) statements -> statement . statements
    (4) statements -> statement .
    (2) statements -> . statement NEWLINE statements
    (3) statements -> . statement statements
    (4) statements -> . statement
    (5) statements -> . empty
    (7) statement -> . print_stmt
    (8) statement -> . assignment_stmt
    (9) statement -> . input_stmt
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . for_stmt
    (13) statement -> . list_stmt
    (14) statement -> . function_def
    (15) statement -> . function_call
    (16) statement -> . return_stmt
    (17) statement -> . break_stmt
    (18) statement -> . expression
    (6) empty -> .
    (29) print_stmt -> . PRINT LPAREN expression RPAREN
    (32) assignment_stmt -> . ID EQUALS expression
    (33) input_stmt -> . ID EQUALS INPUT LPAREN STRING RPAREN
    (34) input_stmt -> . input_multiple
    (45) if_stmt -> . IF expression COLON NEWLINE statements elif_stmt else_stmt
    (46) if_stmt -> . IF expression COLON statements elif_stmt else_stmt
    (53) while_stmt -> . WHILE expression COLON NEWLINE statements
    (54) for_stmt -> . FOR ID IN RANGE LPAREN expression COMMA expression RPAREN COLON NEWLINE statements
    (38) list_stmt -> . ID EQUALS LBRACKET list_elements RBRACKET
    (39) list_stmt -> . ID EQUALS LBRACKET RBRACKET
    (19) function_def -> . DEF ID LPAREN parameter_list RPAREN COLON NEWLINE statements
    (20) function_def -> . DEF ID LPAREN RPAREN COLON NEWLINE statements
    (23) function_call -> . ID LPAREN argument_list RPAREN
    (24) function_call -> . ID LPAREN RPAREN
    (27) return_stmt -> . RETURN expression
    (28) return_stmt -> . RETURN
    (44) break_stmt -> . BREAK
    (42) expression -> . ID LBRACKET expression RBRACKET
    (43) expression -> . ID DOT APPEND LPAREN expression RPAREN
    (55) expression -> . expression PLUS expression
    (56) expression -> . expression MINUS expression
    (57) expression -> . expression TIMES expression
    (58) expression -> . expression DIVIDE expression
    (59) expression -> . expression POWER expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression EQUAL_EQUAL expression
    (63) expression -> . expression NOT_EQUAL expression
    (64) expression -> . expression GREATER expression
    (65) expression -> . expression GREATER_EQUAL expression
    (66) expression -> . expression LESS expression
    (67) expression -> . expression LESS_EQUAL expression
    (68) expression -> . MINUS expression
    (69) expression -> . NOT expression
    (70) expression -> . LPAREN expression RPAREN
    (71) expression -> . NUMBER
    (72) expression -> . FLOAT
    (73) expression -> . INT
    (74) expression -> . STRING
    (75) expression -> . TRUE
    (76) expression -> . FALSE
    (77) expression -> . ID
    (35) input_multiple -> . id_list EQUALS INPUT LPAREN STRING RPAREN
    (36) id_list -> . ID COMMA ID
    (37) id_list -> . ID COMMA id_list

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for ELIF resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for ELSE resolved using rule 4 (statements -> statement .)
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! reduce/reduce conflict for PRINT resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for ID resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for IF resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for WHILE resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for FOR resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for DEF resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for RETURN resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for BREAK resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for MINUS resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for NOT resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for LPAREN resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for NUMBER resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for FLOAT resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for INT resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for STRING resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for TRUE resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for FALSE resolved using rule 4 (statements -> statement .)
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    NEWLINE         shift and go to state 36
    $end            reduce using rule 4 (statements -> statement .)
    ELIF            reduce using rule 4 (statements -> statement .)
    ELSE            reduce using rule 4 (statements -> statement .)
    PRINT           shift and go to state 17
    ID              shift and go to state 19
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    DEF             shift and go to state 25
    RETURN          shift and go to state 26
    BREAK           shift and go to state 27
    MINUS           shift and go to state 28
    NOT             shift and go to state 29
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 32
    STRING          shift and go to state 20
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

  ! NEWLINE         [ reduce using rule 4 (statements -> statement .) ]
  ! PRINT           [ reduce using rule 4 (statements -> statement .) ]
  ! ID              [ reduce using rule 4 (statements -> statement .) ]
  ! IF              [ reduce using rule 4 (statements -> statement .) ]
  ! WHILE           [ reduce using rule 4 (statements -> statement .) ]
  ! FOR             [ reduce using rule 4 (statements -> statement .) ]
  ! DEF             [ reduce using rule 4 (statements -> statement .) ]
  ! RETURN          [ reduce using rule 4 (statements -> statement .) ]
  ! BREAK           [ reduce using rule 4 (statements -> statement .) ]
  ! MINUS           [ reduce using rule 4 (statements -> statement .) ]
  ! NOT             [ reduce using rule 4 (statements -> statement .) ]
  ! LPAREN          [ reduce using rule 4 (statements -> statement .) ]
  ! NUMBER          [ reduce using rule 4 (statements -> statement .) ]
  ! FLOAT           [ reduce using rule 4 (statements -> statement .) ]
  ! INT             [ reduce using rule 4 (statements -> statement .) ]
  ! STRING          [ reduce using rule 4 (statements -> statement .) ]
  ! TRUE            [ reduce using rule 4 (statements -> statement .) ]
  ! FALSE           [ reduce using rule 4 (statements -> statement .) ]
  ! $end            [ reduce using rule 6 (empty -> .) ]
  ! ELIF            [ reduce using rule 6 (empty -> .) ]
  ! ELSE            [ reduce using rule 6 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 6 (empty -> .) ]
  ! PRINT           [ reduce using rule 6 (empty -> .) ]
  ! ID              [ reduce using rule 6 (empty -> .) ]
  ! IF              [ reduce using rule 6 (empty -> .) ]
  ! WHILE           [ reduce using rule 6 (empty -> .) ]
  ! FOR             [ reduce using rule 6 (empty -> .) ]
  ! DEF             [ reduce using rule 6 (empty -> .) ]
  ! RETURN          [ reduce using rule 6 (empty -> .) ]
  ! BREAK           [ reduce using rule 6 (empty -> .) ]
  ! MINUS           [ reduce using rule 6 (empty -> .) ]
  ! NOT             [ reduce using rule 6 (empty -> .) ]
  ! LPAREN          [ reduce using rule 6 (empty -> .) ]
  ! NUMBER          [ reduce using rule 6 (empty -> .) ]
  ! FLOAT           [ reduce using rule 6 (empty -> .) ]
  ! INT             [ reduce using rule 6 (empty -> .) ]
  ! STRING          [ reduce using rule 6 (empty -> .) ]
  ! TRUE            [ reduce using rule 6 (empty -> .) ]
  ! FALSE           [ reduce using rule 6 (empty -> .) ]

    statement                      shift and go to state 3
    statements                     shift and go to state 37
    empty                          shift and go to state 4
    print_stmt                     shift and go to state 5
    assignment_stmt                shift and go to state 6
    input_stmt                     shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10
    list_stmt                      shift and go to state 11
    function_def                   shift and go to state 12
    function_call                  shift and go to state 13
    return_stmt                    shift and go to state 14
    break_stmt                     shift and go to state 15
    expression                     shift and go to state 16
    input_multiple                 shift and go to state 21
    id_list                        shift and go to state 35

state 4

    (5) statements -> empty .

    $end            reduce using rule 5 (statements -> empty .)
    ELIF            reduce using rule 5 (statements -> empty .)
    ELSE            reduce using rule 5 (statements -> empty .)
    NEWLINE         reduce using rule 5 (statements -> empty .)
    PRINT           reduce using rule 5 (statements -> empty .)
    ID              reduce using rule 5 (statements -> empty .)
    IF              reduce using rule 5 (statements -> empty .)
    WHILE           reduce using rule 5 (statements -> empty .)
    FOR             reduce using rule 5 (statements -> empty .)
    DEF             reduce using rule 5 (statements -> empty .)
    RETURN          reduce using rule 5 (statements -> empty .)
    BREAK           reduce using rule 5 (statements -> empty .)
    MINUS           reduce using rule 5 (statements -> empty .)
    NOT             reduce using rule 5 (statements -> empty .)
    LPAREN          reduce using rule 5 (statements -> empty .)
    NUMBER          reduce using rule 5 (statements -> empty .)
    FLOAT           reduce using rule 5 (statements -> empty .)
    INT             reduce using rule 5 (statements -> empty .)
    STRING          reduce using rule 5 (statements -> empty .)
    TRUE            reduce using rule 5 (statements -> empty .)
    FALSE           reduce using rule 5 (statements -> empty .)


state 5

    (7) statement -> print_stmt .

    NEWLINE         reduce using rule 7 (statement -> print_stmt .)
    PRINT           reduce using rule 7 (statement -> print_stmt .)
    ID              reduce using rule 7 (statement -> print_stmt .)
    IF              reduce using rule 7 (statement -> print_stmt .)
    WHILE           reduce using rule 7 (statement -> print_stmt .)
    FOR             reduce using rule 7 (statement -> print_stmt .)
    DEF             reduce using rule 7 (statement -> print_stmt .)
    RETURN          reduce using rule 7 (statement -> print_stmt .)
    BREAK           reduce using rule 7 (statement -> print_stmt .)
    MINUS           reduce using rule 7 (statement -> print_stmt .)
    NOT             reduce using rule 7 (statement -> print_stmt .)
    LPAREN          reduce using rule 7 (statement -> print_stmt .)
    NUMBER          reduce using rule 7 (statement -> print_stmt .)
    FLOAT           reduce using rule 7 (statement -> print_stmt .)
    INT             reduce using rule 7 (statement -> print_stmt .)
    STRING          reduce using rule 7 (statement -> print_stmt .)
    TRUE            reduce using rule 7 (statement -> print_stmt .)
    FALSE           reduce using rule 7 (statement -> print_stmt .)
    $end            reduce using rule 7 (statement -> print_stmt .)
    ELIF            reduce using rule 7 (statement -> print_stmt .)
    ELSE            reduce using rule 7 (statement -> print_stmt .)


state 6

    (8) statement -> assignment_stmt .

    NEWLINE         reduce using rule 8 (statement -> assignment_stmt .)
    PRINT           reduce using rule 8 (statement -> assignment_stmt .)
    ID              reduce using rule 8 (statement -> assignment_stmt .)
    IF              reduce using rule 8 (statement -> assignment_stmt .)
    WHILE           reduce using rule 8 (statement -> assignment_stmt .)
    FOR             reduce using rule 8 (statement -> assignment_stmt .)
    DEF             reduce using rule 8 (statement -> assignment_stmt .)
    RETURN          reduce using rule 8 (statement -> assignment_stmt .)
    BREAK           reduce using rule 8 (statement -> assignment_stmt .)
    MINUS           reduce using rule 8 (statement -> assignment_stmt .)
    NOT             reduce using rule 8 (statement -> assignment_stmt .)
    LPAREN          reduce using rule 8 (statement -> assignment_stmt .)
    NUMBER          reduce using rule 8 (statement -> assignment_stmt .)
    FLOAT           reduce using rule 8 (statement -> assignment_stmt .)
    INT             reduce using rule 8 (statement -> assignment_stmt .)
    STRING          reduce using rule 8 (statement -> assignment_stmt .)
    TRUE            reduce using rule 8 (statement -> assignment_stmt .)
    FALSE           reduce using rule 8 (statement -> assignment_stmt .)
    $end            reduce using rule 8 (statement -> assignment_stmt .)
    ELIF            reduce using rule 8 (statement -> assignment_stmt .)
    ELSE            reduce using rule 8 (statement -> assignment_stmt .)


state 7

    (9) statement -> input_stmt .
